--- a/style.css
+++ b/style.css
@@ -107,3 +107,8 @@ input:focus {
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
+@media screen and (max-width:768px){
+  .container{
+    widht:100%;
+  }
+}
